# Hearth

./: .gitignore  BETA_BUILD_SETUP.md  INSTALLER_WIZARD_README.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/workflows/: build.yml
backend/: .env.example  hearth-backend.spec  requirements-common.txt  requirements-cpu.txt  requirements-gpu.txt
backend/app/: audio_io.py  config.py  main.py
backend/app/checkin/: state.py  tools.py
backend/app/db/: chroma_client.py  sqlite_models.py
backend/app/eval/: llm_judge.py  rubric.md  self_check.py
backend/app/hardware/: detect.py  tier_manager.py
backend/app/llm/: server_manager.py
backend/app/memory/: chat_history.py  embedder.py  long_term.py  short_term.py  tools.py
backend/app/onboarding/: active_profile.py  (+2 more)
desktop/: package.json  pnpm-lock.yaml
desktop/installer/: BUILD_BETA_WORKFLOW.yml  Cargo.toml  INSTALLER_README.md  tauri.conf.json
desktop/installer-ui/: index.html  package.json
desktop/installer/nsis/: installer.nsi
desktop/installer/src/: hardware.rs  installer.rs  lib.rs  main.rs  ui.rs
desktop/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
docs/: architecture.md  privacy.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: recorder-worklet.js
frontend/src/: App.css  App.tsx  main.tsx
scripts/: build_backend.ps1  build_backend.sh  build_windows_installer.ps1  detect_tier_requirements.py  fetch_llama_cpp.py  fetch_setup_python.py  hardware_check.py  setup.py
(+81 files in other folders)
