[package]
name = "hearth-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["shell-open", "os-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
sysinfo = "0.30"
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.51", features = ["Win32_System_Memory"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "hearth-installer"
path = "src/main.rs"

[lib]
name = "installer"
path = "src/lib.rs"
